index.html | footer done, added image in section 1

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <main>
         <section id="section-one">
-
+            <img alt="kevin-malone-sitting-at-table" src="./images/2009Kevincropped.webp" />
         </section>
 
         <section id="section-two">
@@ -25,7 +25,13 @@
         </section>
 
         <footer>
-            
+            <h2>Contact</h2>
+            <ul>
+                <li>Kevin Malone</li>
+                <li><address>215 Vine St, Scranton</address></li>
+                <li><address>PA 18501 USA</address></li>
+                <li><a href="mailto:kevin.malone@example.com">kevin.malone@example.com</a></li>
+            </ul>
         </footer>
     </main>
 </body>
