index.html | skills & quotes sections done

--- a/index.html
+++ b/index.html
@@ -18,10 +18,35 @@
     <main>
         <section id="section-one">
             <img alt="kevin-malone-sitting-at-table" src="./images/2009Kevincropped.webp" />
+
+            <div>
+                <p></p>
+            </div>
         </section>
 
         <section id="section-two">
+            <div>
+                <h2>Skills</h2>
+                <ul>
+                    <li>Fast Math</li>
+                    <li>Excellent Communication Skills</li>
+                    <li>Can use BIG PEN</li>
+                    <li>Plays in a rock band</li>
+                    <li>Archival Skills</li>
+                </ul>
+            </div>
 
+            <div>
+                <h2>Memorable Quotes</h2>
+                <ul>
+                    <li><blockquote>I have very little patience for stupidity.</blockquote></li>
+                    <li><blockquote>Why waste time say lot word when few word do trick?</blockquote></li>
+                    <li><blockquote>I go to the bathroom for 45 minutes and everything changes.</blockquote></li>
+                    <li><blockquote>Mini-cupcakes? As in the mini version of regular cupcakes?</br>
+                        Which is already a mini version of cake?</br>
+                        Honestly, where does it end with you people.</blockquote></li>
+                </ul>
+            </div>
         </section>
 
         <footer>
