finished bio part of html | started css work

--- a/index.html
+++ b/index.html
@@ -20,7 +20,15 @@
             <img alt="kevin-malone-sitting-at-table" src="./images/2009Kevincropped.webp" />
 
             <div>
-                <p></p>
+                <p>
+                    Hi there! I'm Kevin Malone, a finance wizard with a knack for turning numbers into smiles.
+                    Armed with a degree in Accounting (and a chili cook-off championship), I've mastered 
+                    the art of balancing work and fun during my tenure at Dunder Mifflin.</br>
+                    I bring a blend of precision and positivity to every task, tackling complex financial
+                    matters with a grin. Outside the office, you'll catch me drumming to the beat of 
+                    Scrantonicity or perfecting my famous chili recipe.</br>
+                    Let's make numbers and workdays a little brighter together!
+                </p>
             </div>
         </section>
 
