css & html work, see comment for details
css:
centered footer & header
started work on flexbox (site layout)

html:
changed footer from <ul> to just the contained elements (name Kevin Malone is now <p>)
Also rand shift+alt+f to format document

--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
             <div>
                 <p>
                     Hi there! I'm Kevin Malone, a finance wizard with a knack for turning numbers into smiles.
-                    Armed with a degree in Accounting (and a chili cook-off championship), I've mastered 
+                    Armed with a degree in Accounting (and a chili cook-off championship), I've mastered
                     the art of balancing work and fun during my tenure at Dunder Mifflin.</br>
                     I bring a blend of precision and positivity to every task, tackling complex financial
-                    matters with a grin. Outside the office, you'll catch me drumming to the beat of 
+                    matters with a grin. Outside the office, you'll catch me drumming to the beat of
                     Scrantonicity or perfecting my famous chili recipe.</br>
                     Let's make numbers and workdays a little brighter together!
                 </p>
@@ -47,24 +47,30 @@
             <div>
                 <h2>Memorable Quotes</h2>
                 <ul>
-                    <li><blockquote>I have very little patience for stupidity.</blockquote></li>
-                    <li><blockquote>Why waste time say lot word when few word do trick?</blockquote></li>
-                    <li><blockquote>I go to the bathroom for 45 minutes and everything changes.</blockquote></li>
-                    <li><blockquote>Mini-cupcakes? As in the mini version of regular cupcakes?</br>
-                        Which is already a mini version of cake?</br>
-                        Honestly, where does it end with you people.</blockquote></li>
+                    <li>
+                        <blockquote>I have very little patience for stupidity.</blockquote>
+                    </li>
+                    <li>
+                        <blockquote>Why waste time say lot word when few word do trick?</blockquote>
+                    </li>
+                    <li>
+                        <blockquote>I go to the bathroom for 45 minutes and everything changes.</blockquote>
+                    </li>
+                    <li>
+                        <blockquote>Mini-cupcakes? As in the mini version of regular cupcakes?</br>
+                            Which is already a mini version of cake?</br>
+                            Honestly, where does it end with you people.</blockquote>
+                    </li>
                 </ul>
             </div>
         </section>
 
         <footer>
             <h2>Contact</h2>
-            <ul>
-                <li>Kevin Malone</li>
-                <li><address>215 Vine St, Scranton</address></li>
-                <li><address>PA 18501 USA</address></li>
-                <li><a href="mailto:kevin.malone@example.com">kevin.malone@example.com</a></li>
-            </ul>
+            <p>Kevin Malone</p>
+            <address>215 Vine St, Scranton</address>
+            <address>PA 18501 USA</address>
+            <a href="mailto:kevin.malone@example.com">kevin.malone@example.com</a>
         </footer>
     </main>
 </body>
