index.html | update about me (longer text)

--- a/index.html
+++ b/index.html
@@ -21,13 +21,26 @@
 
             <div>
                 <p>
-                    Hi there! I'm Kevin Malone, a finance wizard with a knack for turning numbers into smiles.
-                    Armed with a degree in Accounting (and a chili cook-off championship), I've mastered
-                    the art of balancing work and fun during my tenure at Dunder Mifflin.</br>
-                    I bring a blend of precision and positivity to every task, tackling complex financial
-                    matters with a grin. Outside the office, you'll catch me drumming to the beat of
-                    Scrantonicity or perfecting my famous chili recipe.</br>
-                    Let's make numbers and workdays a little brighter together!
+                    Greetings! I'm Kevin Malone, a seasoned professional with a unique blend of enthusiasm, 
+                    humor, and an undeniable love for numbers. Hailing from the Dunder Mifflin Paper Company 
+                    in Scranton, Pennsylvania, I've spent years navigating the world of accounting and finance 
+                    with my own special touch.</br>
+                    With a degree in Accounting from the School of Life (and a few accounting classes at the 
+                    local community college), I've honed my skills in a fast-paced and occasionally chaotic 
+                    office environment. My time at Dunder Mifflin has not only shaped my professional abilities 
+                    but has also given me a deep appreciation for the art of juggling work responsibilities and 
+                    maintaining a cheerful demeanor.</br>
+                    Known for my stellar performance in the Dunder Mifflin office's famous chili cook-off, I've 
+                    demonstrated a knack for both culinary creativity and the ability to handle high-pressure 
+                    situations. I believe that a well-fed team is a happy team!</br>
+                    My proficiency in number crunching is unmatched, and I have an impressive track record of 
+                    successfully handling complex financial matters, often with a smile on my face. While I may 
+                    not be the quickest when it comes to mental math, my dedication to accuracy is unwavering.</br>
+                    Outside of the office, you'll find me enjoying my favorite band, Scrantonicity, or perfecting 
+                    my drumming skills. I firmly believe that a good beat can solve almost any problem.</br>
+                    In summary, I bring a perfect blend of professionalism, a positive attitude, and a unique 
+                    sense of humor to any workplace. I am eager to contribute my talents and continue making a 
+                    difference in the world of accounting and beyond.
                 </p>
             </div>
         </section>
