--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
                             Which is already a mini version of cake?</br>
                             Honestly, where does it end with you people.</blockquote>
                     </li>
+                    <li>
+                        <blockquote>Would I rather be feared or loved? Easy. Both. I want people to 
+                            be afraid of how much they love me.</blockquote>
+                    </li>
                 </ul>
             </div>
         </section>
