index.html | removed blockquotes
blockquotes made semantic sense but removing them does not make the raw html less readable/understandable

it also makes the css easier>

--- a/index.html
+++ b/index.html
@@ -61,22 +61,22 @@
                 <h2>Memorable Quotes</h2>
                 <ul>
                     <li>
-                        <blockquote>I have very little patience for stupidity.</blockquote>
+                        I have very little patience for stupidity.
                     </li>
                     <li>
-                        <blockquote>Why waste time say lot word when few word do trick?</blockquote>
+                        Why waste time say lot word when few word do trick?
                     </li>
                     <li>
-                        <blockquote>I go to the bathroom for 45 minutes and everything changes.</blockquote>
+                        I go to the bathroom for 45 minutes and everything changes.
                     </li>
                     <li>
-                        <blockquote>Mini-cupcakes? As in the mini version of regular cupcakes?</br>
-                            Which is already a mini version of cake?</br>
-                            Honestly, where does it end with you people.</blockquote>
+                        Mini-cupcakes? As in the mini version of regular cupcakes?</br>
+                        Which is already a mini version of cake?</br>
+                        Honestly, where does it end with you people.
                     </li>
                     <li>
-                        <blockquote>Would I rather be feared or loved? Easy. Both. I want people to
-                            be afraid of how much they love me.</blockquote>
+                        Would I rather be feared or loved? Easy. Both. I want people to
+                        be afraid of how much they love me.
                     </li>
                 </ul>
             </div>
