style.css | #section-two divs are now 35%/65% width
Minor:
style.css margin-bottom on <li> elements are now 0.4em

index.html = removed <br> tags from quote

--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                         I go to the bathroom for 45 minutes and everything changes.
                     </li>
                     <li>
-                        Mini-cupcakes? As in the mini version of regular cupcakes?</br>
-                        Which is already a mini version of cake?</br>
+                        Mini-cupcakes? As in the mini version of regular cupcakes?
+                        Which is already a mini version of cake?
                         Honestly, where does it end with you people.
                     </li>
                     <li>
