--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <header>
-            <h1>Curriculum Vitae</h1>
+            <h1><i>Curriculum Vitae</i></h1>
         </header>
 
         <section id="section-one">
