--- a/index.html
+++ b/index.html
@@ -24,20 +24,30 @@
                     Greetings! I'm Kevin Malone, a seasoned professional with a unique blend of enthusiasm,
                     humor, and an undeniable love for numbers. Hailing from the Dunder Mifflin Paper Company
                     in Scranton, Pennsylvania, I've spent years navigating the world of accounting and finance
-                    with my own special touch.</br>
+                    with my own special touch.
+                </p>
+                <p>
                     With a degree in Accounting from the School of Life (and a few accounting classes at the
                     local community college), I've honed my skills in a fast-paced and occasionally chaotic
                     office environment. My time at Dunder Mifflin has not only shaped my professional abilities
                     but has also given me a deep appreciation for the art of juggling work responsibilities and
-                    maintaining a cheerful demeanor.</br>
+                    maintaining a cheerful demeanor.
+                </p>
+                <p>
                     Known for my stellar performance in the Dunder Mifflin office's famous chili cook-off, I've
                     demonstrated a knack for both culinary creativity and the ability to handle high-pressure
-                    situations. I believe that a well-fed team is a happy team!</br>
+                    situations. I believe that a well-fed team is a happy team!
+                </p>
+                <p>
                     My proficiency in number crunching is unmatched, and I have an impressive track record of
                     successfully handling complex financial matters, often with a smile on my face. While I may
-                    not be the quickest when it comes to mental math, my dedication to accuracy is unwavering.</br>
+                    not be the quickest when it comes to mental math, my dedication to accuracy is unwavering.
+                </p>
+                <p>
                     Outside of the office, you'll find me enjoying my favorite band, Scrantonicity, or perfecting
-                    my drumming skills. I firmly believe that a good beat can solve almost any problem.</br>
+                    my drumming skills. I firmly believe that a good beat can solve almost any problem.
+                </p>
+                <p>
                     In summary, I bring a perfect blend of professionalism, a positive attitude, and a unique
                     sense of humor to any workplace. I am eager to contribute my talents and continue making a
                     difference in the world of accounting and beyond.
