index.html | comment about image  format (.webp/.avif)

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
         </header>
 
         <section id="section-one">
+            <!-- Tried converting the following .webp image
+                    to a .avif file to save space, i could not
+                    get it to work so .webp is fine for now. -->
             <img alt="kevin-malone-sitting-at-table" src="./images/2009Kevincropped.webp" />
 
             <div>
