index.html | search engine description, keywords & author
also added a clarifying comment about what the website is in html source code

--- a/index.html
+++ b/index.html
@@ -2,12 +2,18 @@
 <html lang="en">
 
 <!-- Assignment nr. 1 by Simon Sörqvist -->
+<!-- This page was made as an assignment in basic HTML/CSS at TeknikHögskolan in Gothenburg -->
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css" />
     <title>CV - Kevin Malone</title>
+    <!-- Search engine description -->
+    <meta name="description" content="A CV (Curriculum Vitae) for the fictional character 
+        Kevin Malone from The Office (US). Written as a school assignment." />
+    <meta name="keywords" content="html, css, school, assignment, kevin, malone, office, cv" />
+    <meta name="author" content="Simon Sörqvist" />
 </head>
 
 <body>
